--- a/2 - Développer la partie Front-End/Evaluation/assets/css/index.css
+++ b/2 - Développer la partie Front-End/Evaluation/assets/css/index.css
@@ -1,4 +1,5 @@
 /* Import fonts */
+/*noinspection CssUnknownTarget*/
 @import url("https://fonts.googleapis.com/css?family=Roboto&display=swap");
 
 /* Global Elements */
@@ -11,11 +12,16 @@ h1 {
 }
 
 h2 {
-  font-size: 32.5px;
+  font-size: 33px;
 }
 
 label {
   color: #595959 !important;
+}
+
+td > img.responsive-img {
+  height: 100px;
+  width: 100px;
 }
 
 tr > td > a {
